# minecrouft

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  todo.txt  toto.txt
cmake/: FindGLM.cmake
lib/: glad.c
lib/glad/: glad.h
lib/glm/: CMakeLists.txt
resources/: blocks_pixel_perfect.aseprite  resources.lz4  textures.psd
resources/shaders/: colored.vert  outline_shader_frag.glsl  vertex.glsl  voxel.frag  voxel.vert  voxel_fragment.glsl  voxel_shadow.vert  wireframe.vert
shaders/: fragment.glsl  vertex.glsl
src/: Block.cpp  Block.hpp  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  Cube.cpp  Cube.hpp  Debug.hpp  Frustrum.cpp  Frustrum.hpp  Game.h  Guizmo.cpp  Guizmo.hpp  HeightMap.cpp  HeightMap.hpp  Hud.cpp  Hud.hpp  IO.cpp  IO.hpp  Keyboard.cpp  Keyboard.hpp  LuaConsole.hpp  Mesh.cpp  Mesh.hpp  Mouse.cpp  Mouse.hpp  Player.cpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  TextureAtlas.cpp  TextureAtlas.hpp  TextureManager.cpp  TextureManager.hpp  (+10 more)
src/imgui/: imgui_impl_glfw_gl3.cpp
src/ngLib/: console.cpp  logs.cpp  logs.h  nglib.cpp  nglib.h  sys.cpp  sys.h
